# dronetrack_groundstation_ros

./: .gitattributes  .gitignore  BUG_HUNT_HANDOFF.md  HANDOFF.md  README.md
configs/: cyclonedds.example.xml  groundstation.yaml  network.example.yaml  pi.yaml  topics.yaml
docker/: Dockerfile  README.md  bootstrap_host.sh  dt  setup_in_container.sh
docs/: architecture.md  gazebo_sitl.md  migration_from_dronetrack_pi_ros.md  mission_planner_architecture.md  missions.md  networking.md  safety_contract.md
models/: red_ball.sdf
ros_ws/src/drone_camera/: package.xml  setup.cfg  setup.py
ros_ws/src/drone_camera/drone_camera/: camera_node.py  native_mjpeg_camera_node.py
ros_ws/src/drone_control/: package.xml  setup.cfg  setup.py
ros_ws/src/drone_control/drone_control/: __init__.py  autonomy_logic.py  autonomy_manager_node.py  control_math.py  control_node.py  mission_executor_node.py  mission_plan.py
ros_ws/src/drone_control/missions/: example_min.yaml  full_mission_test.yaml  orbit_red_ball.yaml  scan_and_orbit.yaml
ros_ws/src/drone_control/test/: test_autonomy_logic.py  test_control_math.py  test_mission_plan.py
ros_ws/src/drone_diagnostics/: package.xml  setup.cfg  setup.py
ros_ws/src/drone_diagnostics/drone_diagnostics/: health_monitor_node.py  node_diagnostics.py
ros_ws/src/drone_interfaces/: CMakeLists.txt  package.xml
ros_ws/src/drone_interfaces/msg/: ControlCommand.msg  Detection.msg  DetectionArray.msg  DroneTelemetry.msg  MavsdkActionCommand.msg  MissionCommand.msg  TargetError.msg
ros_ws/src/drone_telemetry/: package.xml  setup.cfg  setup.py
ros_ws/src/drone_telemetry/drone_telemetry/: telemetry_node.py
ros_ws/src/drone_telemetry/resource/: __init__.py
ros_ws/src/drone_tracker/: package.xml  setup.cfg  setup.py
ros_ws/src/drone_tracker/drone_tracker/: tracker_node.py
ros_ws/src/dronetrack_groundstation/: package.xml  setup.cfg  setup.py
ros_ws/src/dronetrack_groundstation/dronetrack_groundstation/: heartbeat_node.py
ros_ws/src/dronetrack_groundstation/launch/: groundstation_launch.py
ros_ws/src/dronetrack_msgs/: CMakeLists.txt  package.xml
ros_ws/src/dronetrack_msgs/msg/: GroundStationHeartbeat.msg  LinkStatus.msg
ros_ws/src/dronetrack_perception/: package.xml  setup.cfg  setup.py
ros_ws/src/dronetrack_perception/dronetrack_perception/: gz_cam_republisher.py  target_mover_node.py  yolo_node.py
ros_ws/src/dronetrack_pi/: package.xml  setup.cfg  setup.py
ros_ws/src/dronetrack_pi/dronetrack_pi/: camera_compressor_node.py  detection_gate_node.py  ground_station_watchdog_node.py
ros_ws/src/dronetrack_pi/launch/: pi_launch.py  sim_producer.launch.py  sitl_gazebo_launch.py  sitl_mission_launch.py
ros_ws/src/dronetrack_web_bridge/: package.xml  setup.cfg  setup.py
ros_ws/src/dronetrack_web_bridge/dronetrack_web_bridge/: MISSION_API_AUDIT.md  MISSION_PLANNER_STYLES_SPEC.md  MISSION_SCHEMA_REFERENCE.md  mission_plan_model.py  mission_preview.py  mission_preview_ext.py  test_mission_planner_logic.js  web_dashboard_node.py
ros_ws/src/dronetrack_web_bridge/test/: test_mission_planner.py  test_mission_preview.py
scripts/: _common.sh  deploy_pi.sh  discover_ips.sh  down.sh  env.sh  install_ros_wsl.sh  pi_split_launcher.sh  ros_wsl.sh  run_groundstation.sh  run_pi.sh  sanity_checks.sh  selftest_boundary.sh  send_plan.py  setup_groundstation.sh  setup_pi.sh  sim_gazebo.sh  sim_sitl.sh  status.sh  test_mjpeg_camera.sh  test_native_mjpeg_stream.sh  up.sh
tests/: test_mission_states.py
