<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dronetrack_perception</name>
  <version>0.1.0</version>
  <description>Laptop-side YOLO inference for the split DroneTrack architecture. Subscribes the Pi compressed camera stream and publishes detections back to the Pi.</description>
  <maintainer email="danielgatesf@gmail.com">DroneTrack</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>drone_interfaces</depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>compressed_image_transport</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
