<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dronetrack_pi</name>
  <version>0.1.0</version>
  <description>Pi-side trust boundary for the split DroneTrack architecture: detection gate (command validator) and ground-station watchdog. Safety-critical control, MAVSDK, and mission nodes are reused unchanged from dronetrack_pi_ros.</description>
  <maintainer email="danielgatesf@gmail.com">DroneTrack</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>drone_interfaces</depend>
  <depend>dronetrack_msgs</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>dronetrack_perception</exec_depend>
  <exec_depend>dronetrack_groundstation</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
