<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dronetrack_web_bridge</name>
  <version>0.1.0</version>
  <description>Laptop-side web dashboard for the split DroneTrack architecture. Shows link state, FPS, latency, detection confidence, and drone status; posts operator request topics the Pi re-validates.</description>
  <maintainer email="danielgatesf@gmail.com">DroneTrack</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>drone_interfaces</depend>
  <depend>dronetrack_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
